# v2x_stack

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: services_params.yml  udp_params.yml
include/: ccu_udp_api.h
launch/: btp_launch.py  services_launch.py
msg/: Area.msg  BtpDataIndication.msg  CohdaInd.msg  GeoNetArea.msg  Location.msg  TrafficClass.msg  UDPDataIndHdr.msg  UDPMsgType.msg  ros_cohda_ind.msg
src/: btp_data_service.cpp  btp_data_service.h  btp_data_service.hpp  ca_message.cpp  ca_message.h  ca_rx.cpp  ca_rx.h  cp_message.cpp  cp_message.h  cp_rx.cpp  cp_rx.h  cp_ts_message.cpp  cp_ts_message.h  cp_ts_rx.cpp  cp_ts_rx.h  den_message.cpp  den_message.h  den_rx.cpp  den_rx.h  udp_dispatcher.cpp  udp_dispatcher.hpp  vam_tx.cpp  vam_tx.h
srv/: BtpData.srv
