<?xml version="1.0"?>
<package format="3">
  <name>v2x_stack_btp</name>
  <version>0.0.1</version>
  <description>Integrates BTP Vanetza and Cohda in ROS</description>
  <maintainer email="silascorreia.lobo@carissma.eu">Silas Lobo</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>v2x_stack</depend>
  <depend>ros_etsi_its_msgs</depend>
  <depend>etsi_its_msgs</depend>   <!-- Ros etsi msgs from RWTH Aachen -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Member of group for interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Export the build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
